/* $Id: ChangeLog 530 2006-09-17 20:38:57Z knut.osmundsen@oracle.com $ */

2006-09-17:
    - kBuild/gmake:
        o Added kBuild specific functions for speeding up source processing.
        o Fixed assertion in w32_fixcase when shell doesn't have a full path 
          and some other case.

2006-09-16:
    - kBuild/header.kmk:
        o Turn off command dependencies when using vanilla GNU Make.
    - kBuild/footer.kmk:
        o Made up my mind about the command depency blocker variables; 
          NO_LINK_CMDS_DEPS and NO_COMPILE_CMDS_DEPS.
    - src/gmake:
        o Added kmk_gmake which is (almost) vanilla GNU Make.
        o kmk_ash wants batch files on windows or the double quotes will get screwed up.
        o Make sure kmk_builtin commands don't get batch files and odd weird stuff.
        o Cleaning up the modifications. Changes are now either configurable 
          or marked, and dead stuff has been removed (dll shell).

2006-09-15:
    - kBuild/bin/x86.win32/kmk.exe:
        o Built new code.
    - kBuild/header.kmk:
        o DIRDEP is now the same on all platforms (fixed with 3.81 merge).
    - kBuild/bin/x86.linux/kmk:
        o Built new code on system360.
    - src/gmake:
        o Some parallel job fixes.
        o Regenerated config.h.linux on system360.
        o Fixed stat("dir/", &st) on windows and some warnings.
        o Merge with GNU Make v3.81 (vendor/gnumake/2005-05-16 -> vendor/gnumake/current).

2006-03-26:
    - kBuild/bin/x86.os2/:
        o Rebuilt the OS/2 tools.
    - src/gmake/variable.c, src/gmake/variable.h, src/gmake/make.h:
        o Attempt at speeding up performance on OS/2.
    - src/gmake/kmkbuiltin/rm.c:
        o OS/2 wants -R.
    - src/gmake/read.c:
        o Don't call glob() unless there is a wildcard pattern in the name.
          This speed things up a bit, at least on FreeBSD and especially on OS/2.
    - Config.kmk:
        o Added -pg for profile builds on OS/2.

2006-02-22: bird